--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,7 @@ RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
+ErrorDocument 404 /index.php?error=404
 </IfModule>
 
 # END WordPress
